--- a/Car_Park_Management/src/main/resources/application.properties
+++ b/Car_Park_Management/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password=2412
 
 #hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 
 server.port=8080
+
+
