--- a/Car_Park_Management/pom.xml
+++ b/Car_Park_Management/pom.xml
@@ -57,6 +57,28 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
+        <dependency>
+
+            <groupId>javax.xml.bind</groupId>
+
+            <artifactId>jaxb-api</artifactId>
+
+            <version>2.3.0</version>
+
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
